--- a/templates/login.html
+++ b/templates/login.html
@@ -40,6 +40,7 @@
         {% csrf_token %}
         <br>
         <img class="mb-4" src="https://firebirdsql.org/file/about/ds-firebird-logo-400.png" alt="" width="72" height="72">
+        
         <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Username</label>
         <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
@@ -53,7 +54,16 @@
         <a class="btn btn-lg btn-secondary btn-block" href="/register">register here</a>
         <br>
         <a class="btn btn-lg btn-danger btn-block" href="/admin">admin</a>
+        <br>
       </form>
+      {% for message in messages %}
+      <style>
+        h4{
+          color: red;
+        }
+      </style>
+        <h4>{{message}}</h4>
+        {% endfor %}
     </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
