--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -28,6 +28,9 @@
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/admin">Admin</a>
           </li>
           <li class="nav-item">
