--- a/templates/register.html
+++ b/templates/register.html
@@ -56,7 +56,16 @@
         <a class="btn btn-lg btn-secondary btn-block" href="/login">login here</a>
         <br>
         <a class="btn btn-lg btn-danger btn-block" href="/admin">admin</a>
+        <br>
       </form>
+      {% for message in messages%}
+        <style>
+          h4{
+            color: red;
+          }
+        </style>
+        <h4>{{message}}</h4>
+        {% endfor %}
     </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
