--- a/templates/results.html
+++ b/templates/results.html
@@ -4,24 +4,53 @@
 
 {% block body %}
 <div class="container">
-    {%if performance_bad %}
-    <h2>Your score is {{score}}/{{total}}</h2>
+    <div class="score" style="border:dashed black 4px;
+                              margin-top: 20px;
+                              padding: 5px">
+        {%if performance_bad %}
+    <h3>Your score is {{score}}/{{total}}</h3>
     <img src="https://img.freepik.com/premium-photo/red-prohibited-sign-allowed-ban-warning-danger-no-symbol-risk-safety-caution-forbidden-stop-icon-isolated-white-background-with-attention-forbid-illustration-3d-graphic-alert-design_79161-1997.jpg?w=360">
-    <h4>A lot of improvement is needed.</h4>
+    <h2>A lot of improvement is needed.</h2>
     {%endif%}
     {%if performance_medium %}
-    <h2>Your score is {{score}}/{{total}}</h2>
+    <h3>Your score is {{score}}/{{total}}</h3>
     <img src="https://t4.ftcdn.net/jpg/04/61/51/21/360_F_461512195_rBzpceWlGBFjOFr2zSK1Qe5obeY5pRCQ.jpg">
-    <h4>Not bad, but could definitely do better.</h4>
+    <h2>Not bad, but could definitely do better.</h2>
     {%endif%}
     {%if performance_good %}
-    <h2>Your score is {{score}}/{{total}}</h2>
+    <h3>Your score is {{score}}/{{total}}</h3>
     <img src="https://img.freepik.com/premium-vector/vector-illustration-flat-style-green-check-mark-indicate-right-choice-vote-accept-button_501907-895.jpg?w=360">
-    <h4>Impressive, you have scored extremely well.</h4>
+    <h2>Impressive, you have scored extremely well.</h2>
     {%endif%}
     <h5>Correct answers: {{correct}}</h5>
     <h5>Wrong answers: {{wrong}}</h5>
     <h5>Total questions: 15</h5>
+    </div>
+    <br>
+    <h2>Summary:</h2>
+    {%for i in basic_ans_c%}
+    <h5>correct for basic question ans {{forloop.counter}}: {{i}}</h5>
+    {%endfor%}
+    <br>
+    {%for i in basic_ans%}
+    <h5>your ans {{forloop.counter}}: {{i}}</h5>
+    {%endfor%}
+    <br><hr><br>
+    {%for i in intermediate_ans_c%}
+    <h5>correct ans for intermediate question {{forloop.counter}}: {{i}}</h5>
+    {%endfor%}
+    <br>
+    {%for i in intermediate_ans%}
+    <h5>your ans {{forloop.counter}}: {{i}}</h5>
+    {%endfor%}
+    <br><hr><br>
+    {%for i in advance_ans_c%}
+    <h5>correct ans for advance question {{forloop.counter}}: {{i}}</h5>
+    {%endfor%}
+    <br>
+    {%for i in advance_ans%}
+    <h5>your ans {{forloop.counter}}: {{i}}</h5>
+    {%endfor%}
     <p><a class="btn btn-dark" href="" role="button">Try again</a></p>
 </div>
 {% endblock body %}
