--- a/templates/index.html
+++ b/templates/index.html
@@ -86,6 +86,21 @@
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
     </div>
+
+    <div class="container">
+      <br><br>
+      <h2>Other users who use this website along with you</h2>
+      <br>
+      {% for i in profiles %}
+      <div class="card" style="width: 18rem;">
+        <img src="{{i.profileimg.url}}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">{{i}}</h5>
+          <p class="card-text">{{i.bio}}</p>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
   
 {% endblock body %}
 
